--- a/src/components/sections/Hero/index.scss
+++ b/src/components/sections/Hero/index.scss
@@ -7,7 +7,6 @@
   flex-direction: column;
   justify-content: space-between;
   color: $white;
-  text-align: center;
   background-color: rgba(0, 0, 0, 0.2);
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,6 +14,7 @@
   background-position: center;
   transition: 0.5s;
   main {
+    text-align: center;
     @include flex-center;
     flex-direction: column;
   }
@@ -31,7 +31,7 @@
       border-radius: 100%;
       margin: 0.3rem;
       transition: 0.2s;
-      &.active,
+      &.selected,
       &:hover {
         background-color: $white;
         cursor: pointer;
